...
    override fun onStop() {
        AppContainer.from(this).taskService.setVisible(false)
        super.onStop()
    }

    override fun attachBaseContext(newBase: Context) {
        val tag = GeneralPreferences(newBase).effectiveLanguageTag
        val config = Configuration(newBase.resources.configuration)
        config.setLocales(LocaleList.forLanguageTags(tag))
        super.attachBaseContext(newBase.createConfigurationContext(config))
    }

    override fun onCreate(savedInstanceState: Bundle?) {
...
